# Web_parser

./: .gitignore  README.md  example.py  pyproject.toml
collected_data/: data_from_page_0  data_from_page_1
examples/: 1_example.py  2_example.py
examples/auth/: 1_example.py
examples/parsing/: 1_example.py  2_example.py
page_parser_logger/: main.py
pages_parser_logger/: main.py
parsing/: auth.py  data_collection.py  exceptions.py  general_methods.py
selenium_drivers/: firefox.py  google_chrome.py  tools.py
utils/: decorators.py  for_building_input_data.py  helpers.py  progress_bars.py  type_hinting.py
web_parser_logger/: main.py  settings.py
